# microbit-embassy-accelerometer

./: Cargo.toml  README.md  memory.x
src/: main.rs
