[package]
edition = "2024"
name = "microbit-embassy-accelerometer"
version = "0.1.0"
authors = ["Paulo Remoli <paulo002@gmail.com>"]
resolver = "2"

[[bin]]
name = "microbit-embassy-accelerometer"
test = false
bench = false

[dependencies]
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-embedded-hal = "0.5.0"
embassy-nrf = { version = "0.9", features = ["defmt", "nrf52833", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
lsm303agr = { version = "1.1.0", features = ["async"]}
static_cell = "2.1.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
